--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>  
   
     <script>
-        sessionStorage.redirect = location.href;
+        sessionStorage.redirect = index.hrml;
       </script>
       <meta http-equiv="refresh" content="0;URL='https://johnatannunes.github.io/fitnessword'"></meta>
 
@@ -26,6 +26,7 @@
           }
         })();
       </script>
+      <h1>Ola</h1>
   <app-root></app-root>
 <script type="text/javascript" src="inline.bundle.js"></script><script type="text/javascript" src="polyfills.bundle.js"></script><script type="text/javascript" src="styles.bundle.js"></script><script type="text/javascript" src="vendor.bundle.js"></script><script type="text/javascript" src="main.bundle.js"></script></body>
 </html>
