--- a/index.html
+++ b/index.html
@@ -3,10 +3,19 @@
 <head>  
   
     <script>
-        sessionStorage.redirect = index.hrml;
+        sessionStorage.redirect = index.html;
       </script>
       <meta http-equiv="refresh" content="0;URL='https://johnatannunes.github.io/fitnessword'"></meta>
-
+      <script>
+          // See http://www.backalleycoder.com/2016/05/13/sghpa-the-single-page-app-hack-for-github-pages/
+          (function(){
+            var redirect = sessionStorage.redirect;
+            delete sessionStorage.redirect;
+            if (redirect && redirect != index.html) {
+              history.replaceState(null, null, redirect);
+            }
+          })();
+        </script>
 
   <meta charset="utf-8">
   <title>Gym</title>
@@ -16,16 +25,7 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-    <script>
-        // See http://www.backalleycoder.com/2016/05/13/sghpa-the-single-page-app-hack-for-github-pages/
-        (function(){
-          var redirect = sessionStorage.redirect;
-          delete sessionStorage.redirect;
-          if (redirect && redirect != location.href) {
-            history.replaceState(null, null, redirect);
-          }
-        })();
-      </script>
+
       <h1>Ola</h1>
   <app-root></app-root>
 <script type="text/javascript" src="inline.bundle.js"></script><script type="text/javascript" src="polyfills.bundle.js"></script><script type="text/javascript" src="styles.bundle.js"></script><script type="text/javascript" src="vendor.bundle.js"></script><script type="text/javascript" src="main.bundle.js"></script></body>
