--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <meta name="apple-mobile-web-app-title" content="Material Design Lite">
   
     <script>
-        sessionStorage.redirect = /app/login/login.component.html;
+        sessionStorage.redirect = app/login/login.component.html;
       </script>
       <meta http-equiv="refresh" content="0;URL='https://johnatannunes.github.io/fitnessword'"></meta>
       <script>
@@ -19,7 +19,7 @@
           (function(){
             var redirect = sessionStorage.redirect;
             delete sessionStorage.redirect;
-            if (redirect && redirect != /app/login/login.component.html) {
+            if (redirect && redirect != app/login/login.component.html) {
               history.replaceState(null, null, redirect);
             }
           })();
