--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <meta name="apple-mobile-web-app-title" content="Material Design Lite">
   
     <script>
-        sessionStorage.redirect = login.component.html;
+        sessionStorage.redirect = index.html;
       </script>
       <meta http-equiv="refresh" content="0;URL='https://johnatannunes.github.io/fitnessword'"></meta>
       <script>
@@ -19,7 +19,7 @@
           (function(){
             var redirect = sessionStorage.redirect;
             delete sessionStorage.redirect;
-            if (redirect && redirect != login.component.html) {
+            if (redirect && redirect !=  index.html) {
               history.replaceState(null, null, redirect);
             }
           })();
@@ -37,6 +37,7 @@
 
 </head>
 <body>
+  <h1>hoça</h1>
     <app-root></app-root>
 
  
