--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>  
   
     <script>
-        sessionStorage.redirect = tt.html;
+        sessionStorage.redirect = app-root;
       </script>
       <meta http-equiv="refresh" content="0;URL='https://johnatannunes.github.io/fitnessword'"></meta>
       <script>
@@ -11,7 +11,7 @@
           (function(){
             var redirect = sessionStorage.redirect;
             delete sessionStorage.redirect;
-            if (redirect && redirect != tt.html) {
+            if (redirect && redirect != app-root) {
               history.replaceState(null, null, redirect);
             }
           })();
