--- a/index.html
+++ b/index.html
@@ -2,24 +2,10 @@
 <html lang="en">
 <head>  
   
-    <script>
-        sessionStorage.redirect = app-root;
-      </script>
-      <meta http-equiv="refresh" content="0;URL='https://johnatannunes.github.io/fitnessword'"></meta>
-      <script>
-          // See http://www.backalleycoder.com/2016/05/13/sghpa-the-single-page-app-hack-for-github-pages/
-          (function(){
-            var redirect = sessionStorage.redirect;
-            delete sessionStorage.redirect;
-            if (redirect && redirect != app-root) {
-              history.replaceState(null, null, redirect);
-            }
-          })();
-        </script>
 
   <meta charset="utf-8">
   <title>Gym</title>
-  <base href="/">
+  <base href="https://johnatannunes.github.io/fitnessword/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
